--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,9 @@ dependencies {
     implementation 'org.mybatis:mybatis:3.5.9'
     implementation 'org.mybatis:mybatis-spring:2.0.7'
 
-    // modelmapper
+    // DTO와 VO의 변환을 위해
     implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.0.0'
+    // DTO 검증을 위한 volidate 라이브러리
     implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
 }
 
